Bug#31381 Error in retrieving Data from INFORMATION_SCHEMA move 'table_collation' field filling outside of if(file) condition because this field has 'OPEN_FRM_ONLY' attribute